force-app/main/default/objects/KimbleOne__Credit__c/KimbleOne__Credit__c.object-meta.xml
<CustomObject>
    <label>Credit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>