force-app/main/default/objects/KimbleOne__Credit__c/fields/KimbleOne__AllocatedUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocatedUnits__c</fullName>
    <label>Allocated Units</label>
    <summarizedField>KimbleOne__CreditAllocation__c.KimbleOne__AllocatedUnits__c</summarizedField>
    <summaryForeignKey>KimbleOne__CreditAllocation__c.KimbleOne__Credit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>