force-app/main/default/objects/KimbleOne__Credit__c/fields/KimbleOne__CreditDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditDate__c</fullName>
    <label>Credit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>