force-app/main/default/objects/KimbleOne__Credit__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold Through</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Credits</relationshipLabel>
    <relationshipName>Credits</relationshipName>
    <type>Lookup</type>
</CustomField>