force-app/main/default/objects/KimbleOne__Credit__c/fields/KimbleOne__ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpiryDate__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>