force-app/main/default/objects/KimbleOne__Credit__c/fields/KimbleOne__UnallocatedUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UnallocatedUnits__c</fullName>
    <formula>KimbleOne__CreditUnits__c - KimbleOne__AllocatedUnits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unallocated Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>