force-app/main/default/objects/KimbleOne__Credit__c/fields/KimbleOne__UnallocatedValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UnallocatedValue__c</fullName>
    <formula>KimbleOne__CreditValue__c -  KimbleOne__AllocatedValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unallocated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>