force-app/main/default/objects/KimbleOne__Credit__c/fields/KimbleOne__UnitValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UnitValue__c</fullName>
    <label>Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>