force-app/main/default/objects/KimbleOne__Credit__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Account__c</columns>
    <columns>KimbleOne__DeliveryElement__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__CreditDate__c</columns>
    <columns>KimbleOne__ExpiryDate__c</columns>
    <columns>KimbleOne__CreditValue__c</columns>
    <columns>KimbleOne__AllocatedValue__c</columns>
    <columns>KimbleOne__UnallocatedValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>